--- a/Day 4/border.html
+++ b/Day 4/border.html
@@ -12,6 +12,10 @@
     background-color: #A2D2DF;
     border-radius: 25px;
     margin-left: 300px;
+
+    outline-width: thick;
+    outline: 2px solid red;
+    outline-offset: 15px;
 }
    p.dashed {
     border-style: dashed;
@@ -20,6 +24,10 @@
     text-align: center;
     border-radius: 25px;
     margin-right: 300px;
+
+    outline-width: thick;
+    outline: 2px solid red;
+    outline-offset: 15px;
 }
 p.solid {
     border-style: solid;
@@ -28,6 +36,10 @@ p.solid {
     text-align: center;
     border-radius: 25px;
     margin-left: 300px;
+
+    outline-width: thick;
+    outline: 2px solid red;
+    outline-offset: 15px;
 }
 p.double {
     border-style: double;
@@ -36,6 +48,10 @@ p.double {
     text-align: center;
     border-radius: 25px;
     margin-right: 300px;
+
+    outline-width: thick;
+    outline: 2px solid red;
+    outline-offset: 15px;
 }
 p.groove{
     border-style: groove;
@@ -44,6 +60,10 @@ p.groove{
     text-align: center;
     border-radius: 25px;
     margin-left: 300px;
+    
+    outline-width: thick;
+    outline: 2px solid red;
+    outline-offset: 15px;
 }
 p.ridge {border-style: ridge;
     padding:25px;
@@ -51,18 +71,22 @@ p.ridge {border-style: ridge;
     text-align: center;
     border-radius: 25px;
     margin-right: 300px;
+
+    outline-width: thick;
+    outline: 2px solid red;
+    outline-offset: 15px;
 }
 
 
 </style>
 </head>
 <body>
-   <p class="dotted"> A DOTTED BORDER</p>
-   <p class="dashed">A DASHED NORDER</p>
-   <p class="solid">A SOLID BORDER</p>
-   <p class="double">A DOUBLE BORDER</p>
-   <p class="groove">A GROOVE BORDER</p>
-   <p class="ridge">A RIDGE BORDER</p>
+   <p class="dotted"> A DOTTED BORDER</p><br><br>
+   <p class="dashed">A DASHED NORDER</p><br><br>
+   <p class="solid">A SOLID BORDER</p><br><br>
+   <p class="double">A DOUBLE BORDER</p><br><br>
+   <p class="groove">A GROOVE BORDER</p><br><br>
+   <p class="ridge">A RIDGE BORDER</p><br><br>
    
 </body>
 </html>
