--- a/Project/registration.html
+++ b/Project/registration.html
@@ -37,6 +37,14 @@
                   <!-- Dropdown Submenu -->
                   <ul class="hidden group-hover:block bg-gray-800">
                     <li class="flex items-center px-8 py-3 hover:bg-gray-700 cursor-pointer ">
+                      <span class="material-icons mr-4"><img src="images/staff.png" width="25px" height="25px"></span>
+                      <span><a href="staff.html">Staff/Trainee</a></span>
+                    </li>
+                    <li class="flex items-center px-8 py-3 hover:bg-gray-700 cursor-pointer ">
+                      <span class="material-icons mr-4"><img src="images/membership.png" width="25px" height="25px"></span>
+                      <span><a href="membership.html">Membership</a></span>
+                    </li>
+                    <li class="flex items-center px-8 py-3 hover:bg-gray-700 cursor-pointer ">
                       <span class="material-icons mr-4"><img src="images/all classes.png" width="25px" height="25px"></span>
                       <span><a href="allclasses.html">All Classes</a></span>
                     </li>
