--- a/Project/staff.html
+++ b/Project/staff.html
@@ -37,11 +37,11 @@
 
               <li>
                 <div class="group">
-                  <div class="flex items-center px-6 py-3 hover:bg-gray-700 cursor-pointer">
+                  <div class="flex items-center px-6 py-3 hover:bg-gray-600 cursor-pointer">
                     <span class="material-icons mr-4"><img src="images/menu1.png" width="20px" height="20px"></span>
-                    <span>Admin</span>
+                    <span><a href="registration.html">Admin</a></span>
                     <span class="ml-auto material-icons group-hover:rotate-180 transition-transform">
-                      V
+                      <img src="images/V.png" width="15px" height="15px">
                     </span>
                   </div>
                   <!-- Dropdown Submenu -->
@@ -72,11 +72,11 @@
               <!-- All Members Section -->
               <li>
                 <div class="group">
-                  <div class="flex items-center px-6 py-3 hover:bg-gray-700 cursor-pointer">
+                  <div class="flex items-center px-6 py-3 hover:bg-gray-600 cursor-pointer">
                     <span class="material-icons mr-4"><img src="images/menu2.png" width="25px" height="25px"></span>
                     <span>All members</span>
                     <span class="ml-auto material-icons group-hover:rotate-180 transition-transform">
-                      V
+                      <img src="images/v.png" width="15px" height="15px">
                     </span>
                   </div>
                   <!-- Dropdown Submenu -->
@@ -235,7 +235,7 @@
               <td class="px-4 py-3">abc@gmail.com</td>
               <td class="px-4 py-3">Morning</td>
               <td class="px-4 py-3">
-                <a href="#" class="text-blue-500 hover:underline">View Details</a>
+                <a href="viewdetail.html" class="text-blue-500 hover:underline">View Details</a>
             </td>
             <td class="px-4 py-3">
               <a href="#" class="text-blue-500 hover:underline mr-2">
@@ -257,7 +257,7 @@
             <td class="px-4 py-3">abc@gmail.com</td>
             <td class="px-4 py-3">Morning</td>
             <td class="px-4 py-3">
-              <a href="#" class="text-blue-500 hover:underline">View Details</a>
+              <a href="viewdetail.html" class="text-blue-500 hover:underline">View Details</a>
           </td>
           <td class="px-4 py-3">
             <a href="#" class="text-blue-500 hover:underline mr-2">
@@ -279,7 +279,7 @@
           <td class="px-4 py-3">abc@gmail.com</td>
           <td class="px-4 py-3">Morning</td>
           <td class="px-4 py-3">
-            <a href="#" class="text-blue-500 hover:underline">View Details</a>
+            <a href="viewdetail.html" class="text-blue-500 hover:underline">View Details</a>
         </td>
         <td class="px-4 py-3">
           <a href="#" class="text-blue-500 hover:underline mr-2">
@@ -301,7 +301,7 @@
         <td class="px-4 py-3">abc@gmail.com</td>
         <td class="px-4 py-3">Morning</td>
         <td class="px-4 py-3">
-          <a href="#" class="text-blue-500 hover:underline">View Details</a>
+          <a href="viewdetail.html" class="text-blue-500 hover:underline">View Details</a>
       </td>
       <td class="px-4 py-3">
         <a href="#" class="text-blue-500 hover:underline mr-2">
@@ -323,7 +323,7 @@
       <td class="px-4 py-3">abc@gmail.com</td>
       <td class="px-4 py-3">Morning</td>
       <td class="px-4 py-3">
-        <a href="#" class="text-blue-500 hover:underline">View Details</a>
+        <a href="viewdetail.html" class="text-blue-500 hover:underline">View Details</a>
     </td>
     <td class="px-4 py-3">
       <a href="#" class="text-blue-500 hover:underline mr-2">
@@ -345,7 +345,7 @@
       <td class="px-4 py-3">abc@gmail.com</td>
       <td class="px-4 py-3">Morning</td>
       <td class="px-4 py-3">
-        <a href="#" class="text-blue-500 hover:underline">View Details</a>
+        <a href="viewdetail.html" class="text-blue-500 hover:underline">View Details</a>
     </td>
     <td class="px-4 py-3">
       <a href="#" class="text-blue-500 hover:underline mr-2">
