--- a/Project/allclasses.html
+++ b/Project/allclasses.html
@@ -27,11 +27,11 @@
 
               <li>
                 <div class="group">
-                  <div class="flex items-center px-6 py-3 hover:bg-gray-700 cursor-pointer">
+                  <div class="flex items-center px-6 py-3 hover:bg-gray-600 cursor-pointer">
                     <span class="material-icons mr-4"><img src="images/menu1.png" width="20px" height="20px"></span>
-                    <span>Admin</span>
+                    <span><a href="registration.html">Admin</a></span>
                     <span class="ml-auto material-icons group-hover:rotate-180 transition-transform">
-                      V
+                      <img src="images/V.png" width="15px" height="15px">
                     </span>
                   </div>
                   <!-- Dropdown Submenu -->
@@ -62,11 +62,11 @@
               <!-- All Members Section -->
               <li>
                 <div class="group">
-                  <div class="flex items-center px-6 py-3 hover:bg-gray-700 cursor-pointer">
+                  <div class="flex items-center px-6 py-3 hover:bg-gray-600 cursor-pointer">
                     <span class="material-icons mr-4"><img src="images/menu2.png" width="25px" height="25px"></span>
                     <span>All members</span>
                     <span class="ml-auto material-icons group-hover:rotate-180 transition-transform">
-                      V
+                      <img src="images/v.png" width="15px" height="15px">
                     </span>
                   </div>
                   <!-- Dropdown Submenu -->
