--- a/Project/viewdetail.html
+++ b/Project/viewdetail.html
@@ -37,26 +37,26 @@
 
               <li>
                 <div class="group">
-                  <div class="flex items-center px-6 py-3 hover:bg-gray-700 cursor-pointer">
-                    <span class="material-icons mr-4"><img src="images\adminvector.png" width="20px" height="20px"></span>
-                    <span>Admin</span>
+                  <div class="flex items-center px-6 py-3 hover:bg-gray-600 cursor-pointer">
+                    <span class="material-icons mr-4"><img src="images/menu1.png" width="20px" height="20px"></span>
+                    <span><a href="registration.html">Admin</a></span>
                     <span class="ml-auto material-icons group-hover:rotate-180 transition-transform">
-                      V
+                      <img src="images/V.png" width="15px" height="15px">
                     </span>
                   </div>
                   <!-- Dropdown Submenu -->
-                  <li class="flex items-center px-8 py-3 hover:bg-gray-700 cursor-pointer ">
-                    <span class="material-icons mr-4"><img src="images/staff.png" width="25px" height="25px"></span>
-                    <span><a href="staff.html">Staff/Trainee</a></span>
-                  </li>
-                  <li class="flex items-center px-8 py-3 hover:bg-gray-700 cursor-pointer ">
-                    <span class="material-icons mr-4"><img src="images/membership.png" width="25px" height="25px"></span>
-                    <span><a href="membership.html">Membership</a></span>
-                  </li>
                   <ul class="hidden group-hover:block bg-gray-800">
+                    <li class="flex items-center px-8 py-3 hover:bg-gray-700 cursor-pointer text-orange-400">
+                      <span class="material-icons mr-4"><img src="images/staff org.png" width="25px" height="25px"></span>
+                      <span><a href="staff.html">Staff/Trainee</a></span>
+                    </li>
+                    <li class="flex items-center px-8 py-3 hover:bg-gray-700 cursor-pointer ">
+                      <span class="material-icons mr-4"><img src="images/membership.png" width="25px" height="25px"></span>
+                      <span><a href="membership.html">Membership</a></span>
+                    </li>
                     <li class="flex items-center px-8 py-3 hover:bg-gray-700 cursor-pointer ">
                       <span class="material-icons mr-4"><img src="images/all classes.png" width="25px" height="25px"></span>
-                      <span><a href="addtrainee.html">All Classes</a></span>
+                      <span><a href="allclasses.html">All Classes</a></span>
                     </li>
                     <li class="flex items-center px-8 py-3 hover:bg-gray-700 cursor-pointer ">
                       <span class="material-icons mr-4"><img src="images/attendence.png" width="25px" height="25px"></span>
@@ -72,11 +72,11 @@
               <!-- All Members Section -->
               <li>
                 <div class="group">
-                  <div class="flex items-center px-6 py-3 hover:bg-gray-700 cursor-pointer">
+                  <div class="flex items-center px-6 py-3 hover:bg-gray-600 cursor-pointer">
                     <span class="material-icons mr-4"><img src="images/menu2.png" width="25px" height="25px"></span>
                     <span>All members</span>
                     <span class="ml-auto material-icons group-hover:rotate-180 transition-transform">
-                      V
+                      <img src="images/v.png" width="15px" height="15px">
                     </span>
                   </div>
                   <!-- Dropdown Submenu -->
@@ -137,7 +137,7 @@
             <img src="images\Notifications.png" alt="Class Image" class="w-8 h-8 mr-4">
             <img src="images\Settings.png" alt="Class Image" class="w-8 h-8">
             <span class="text-gray-800 font-medium">Username</span>
-            <img src="images\placeholder.png" alt="User" class="w-10 h-10 ">
+            <img src="images\photo.png" alt="User" class="w-10 h-10 ">
         </div>
     </div>
     <div class="max-w-7xl mx-auto mt-6 p-6 bg-white border-2 border-blue-500 rounded-lg shadow-lg">
@@ -156,7 +156,7 @@
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
           <div class="col-span-1 flex flex-col items-center">
             <div class="w-32 h-32 mb-4 mt-20 rounded-full overflow-hidden border-2 border-gray-300">
-              <img src="images\Ellipse 520.png" alt="Profile Picture" class="w-full h-full object-cover" />
+              <img src="images/Ellipse 527.png" alt="Profile Picture" class="w-full h-full object-cover" />
             </div>
       
             <div class="mt-6 text-center">
